# ARC-StreamMemory

./: ARC_STREAMMEMORY_DEVTO_POST.md  CITATION.cff  LICENSE  QUICKSTART.md  README.md  pyproject.toml
data/: repo_references.json  seo_keywords.json
docs/: AI_MODULE_ATTACHMENT.md  ARCHITECTURE.md  ARC_FUSION_CAPTURE_INTEGRATION.md  ECOSYSTEM_LINK_GRAPH.md  FFMPEG_BACKEND.md  FFMPEG_FUSIONCAPTURE_AUDIT.md  GITHUB_REPO_SETUP.md  HARDWARE_ACCELERATION.md  INTEGRATION_GATES.md  MEMORY_TIERS.md  PRIVACY_AND_PERMISSIONS.md  PUBLIC_LAUNCH_POST.md  PUBLIC_README_STRATEGY.md  REPO_REFERENCE_MAP.md  ROBOTICS_CAPTURE_MODES.md  SEEDED_VISUAL_MEMORY_STORAGE.md  SENSOR_SYNC_MODEL.md  SEO_LAUNCH_PLAN.md  SOURCE_SPINE_REPLAY_MODEL.md  VIEWER_DESIGN.md
examples/: sensor_log.jsonl
integrations/arc_core/: push_receipts.py
integrations/arc_fusion_capture/: README.md  profile_presets.json
release_evidence/: ARC_STREAMMEMORY_RELEASE_MANIFEST.json  source_inventory.json
schemas/: capture_policy.schema.json  frame_index.schema.json  memory_spine.schema.json  module_attachment.schema.json  robotics_session.schema.json  seed_spine.schema.json  sensor_frame.schema.json
scripts/: build_ai_digest.py  build_capture_policy.py  build_seed_spine.py  build_stream_memory.py  common.py  create_demo_session.py  derive_session_seed.py  ffmpeg_probe.py  fusion_capture_adapter.py  hash_memory_spine.py  ingest_snapshot_folder.py  ingest_video.py  make_bundle.py  sync_sensor_log.py  validate_memory_bundle.py  validate_repo.py  verify_source_spine.py
viewer/: index.html  style.css  viewer.js
(+16 files in other folders)
